css/master.css
* {
  box-sizing: border-box;
}

.clearfix:after {
  content: "";
  display: block;
  clear: both;
}

body {
  margin: 0;
  background: url(../img/land2.jpg) no-repeat;
  font-family: 'Berkshire Swash', cursive;
  /* font-family: 'Lato', sans-serif; */
}

/* header */

header {
  width: 100%;
  height: 80px;
  position: absolute;
}

.logo {
  background: url(../img/logo.png) no-repeat;
  background-position: center;
  background-size: contain;
  width: 20%;
  height: 176px;
  margin: 0 auto;
  transition: all 0.5s;
}

/* .logo:hover {

} */

.bar {
  width: 35%;
}

.left-bar {
  float: left;
  padding: 0 0 0 1%;
}

.right-bar {
  position: absolute;
  padding: 0 1% 0 0;
  right: 0;
  top: 0;
}

.health {
  height: 44px;
  transition: all 1s;
}

.health-left {
  margin: 20px 0 0 20px;
  background: rgb(181, 5, 5);
  border-radius: 50px;
  width: 100%;
}

.health-right {
  margin: 20px 20px 0 0;
  background: rgb(181, 5, 5);
  border-radius: 50px;
  width: 100%;
  float: right;
}

.health-left:after {
  content: "";
  background: url(../img/skull.png) no-repeat;
  background-size: contain;
  height: 60px;
  width: 60px;
  position: absolute;
  margin-top: -8px;
  margin-left: -20px;
}

.left-bar.bar>span {
  font-size: 2rem;
  margin-top: 10px;
  margin-left: 7px;
  display: block;
}

.right-bar.bar>span {
  font-size: 2rem;
  margin-top: 10px;
  margin-right: 7px;
  position: absolute;
  right: 13px;
  top: 64px;
}

.health-right::after {
  content: "";
  background: url(../img/skull.png) no-repeat;
  background-size: contain;
  height: 60px;
  width: 60px;
  right: 8px;
  position: absolute;
  margin-top: -8px;
}

.skullmove::after {
  content: "";
  background: url(../img/skull.png) no-repeat;
  background-size: contain;
  height: 65px;
  width: 65px;
  position: absolute;
  margin-top: -8px;
  margin-right: 10px;
  animation: skullMove 0.5s infinite;
  animation-timing-function: ease-in-out;
}

@keyframes skullMove {
  100% {
    height: 70px;
    width: 70px;
  }
}

/* SIDEBAR */

aside {
  position: absolute;
  height: 100vh;
  width: 50px;
  background: rgb(176, 32, 0);
  left: -50px;
  transition: all 1s;
}

.aside-button {
  background: rgb(176, 32, 0);
  border-radius: 50%;
  width: 50px;
  height: 50px;
  position: absolute;
  left: 25px;
  bottom: 50px;
}

.sidebar ul li {
  color: white;
}

/* main stuff */

.container {
  display: flex;
  align-items: center;
  flex-wrap: wrap;
  flex-direction: column;
  background-position: center;
  background-size: cover;
  height: 100vh;
  width: 100%;
}

/* slash attack */

.hero {
  width: 647px;
  height: 655px;
  background: url('../img/slash2.png') no-repeat;
  animation-play-state: paused;
  background-position: 0;
  left: 42%;
  position: absolute;
  transition: left 1s;
}

.slashRun {
  animation: slash 1s steps(16) running;
  /* animation-iteration-count: 1;
  animation-fill-mode: forwards; */
  left: 39%;
}

@keyframes slash {
  100% {
    background-position: -10340px;
  }
}

/* defend move */

.defendRun {
  background: url('../img/defend.png') no-repeat;
  animation: def 1s steps(16) running;
}

@keyframes def {
  100% {
    background-position: -10340px;
  }
}

/* feint move */

.feintRun {
  background: url('../img/feint.png') no-repeat;
  animation: feint 1s steps(16) running;
}

@keyframes feint {
  100% {
    background-position: -10340px;
  }
}

/* monsta */

.monsta {
  width: 647px;
  height: 655px;
  background: url('../img/monsta.png') no-repeat;
  animation-play-state: paused;
  background-position: 0;
  position: absolute;
  left: 24%;
  z-index: 1;
}

.monstaRun {
  animation: slash 1s steps(16) running;
  /* animation-iteration-count: 1;
  animation-fill-mode: forwards; */
}

@keyframes monstaSlash {
  100% {
    background-position: -10340px;
  }
}

/* container for characters */

.fight {
  width: 80%;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  margin-top: -82px;
}

.win {
  background: url('../img/win.png') no-repeat;
  width: 60%;
  height: 60%;
  background-position: center;
  background-size: contain;
  z-index: 1;
  animation: winner 0.5s steps(2) 3 paused;
  display: none;
  animation-timing-function: ease-in-out;
}

@keyframes winner {
  50% {
    height: 100%;
    width: 100%;
  }
  100% {
    height: 50%;
    width: 50%;
  }
}

/* footer */

footer {
  width: 40%;
  height: 117px;
  color: white;
  bottom: 0;
  position: fixed;
  display: flex;
  z-index: 2;
  border-radius: 20px;
  margin-bottom: 2px;
}

.action {
  width: 122px;
  height: 122px;
  background: black;
  margin: auto;
  font-size: 1.6em;
  padding: 5px 5px 5px 5px;
  cursor: cell;
  margin-top: -38px;
  transition: all 0.3s;
  text-align: center;
  border-radius: 20px;
}

.action span {
  display: table;
  width: 114px;
}

.iconSkull {
  background: url('../img/skulla.png') no-repeat;
}

.iconDefend {
  background: url('../img/shield.png') no-repeat;
}

.actionIcon {
  display: block;
  background-size: contain;
  background-position: center;
  height: 70%;
  transition: all 0.5s;
}

.action:hover {
  color: red;
  margin-top: -58px;
}

.action .actionIcon:hover {
  height: 80%;
}

